syntax = "proto3";
package Protocol;

message Character {
    uint32 playerid = 1;
    uint32 packet_size = 2;
    uint32 type = 3;
    float x = 4;
    float y = 5;
    float z = 6;
    float pitch = 7;
    float yaw = 8;
    float roll = 9;
    float hp = 10;
    uint32 weapon = 11;
    bool attack = 12;
    bool isingame = 13;
};

message Zombie {
    uint32 zombieid = 1;
    uint32 packet_size = 2;
    uint32 type = 3;
    float x = 4;
    float y = 5;
    float z = 6;
    float pitch = 7;
    float yaw = 8;
    float roll = 9;
    float hp = 10;
    bool attack = 11;
};

