syntax = "proto3";
package Protocol;

message CS_Login {
    string id;
    uint32 password;
};

message SC_Login {
    bool b_login;
};

message CS_Ready{
    uint32 playerid = 1;
    bool ready = 2;
}

message SC_Ready{
    bool allready = 1;
}